// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Group Resolver deleteViewGroup should throw an error when deleting non-existent view group 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "VIEW_GROUP_NOT_FOUND",
    "userFriendlyMessage": "A view group error occurred.",
  },
  "message": "View group to destroy not found",
  "name": "NotFoundError",
}
`;

exports[`View Group Resolver destroyViewGroup should throw an error when destroying non-existent view group 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "VIEW_GROUP_NOT_FOUND",
    "userFriendlyMessage": "A view group error occurred.",
  },
  "message": "View group to destroy not found",
  "name": "NotFoundError",
}
`;

exports[`View Group Resolver updateViewGroup should throw an error when updating non-existent view group 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "VIEW_GROUP_NOT_FOUND",
    "userFriendlyMessage": "A view group error occurred.",
  },
  "message": "View group to update not found",
  "name": "NotFoundError",
}
`;
